RESOLVED FIXED152934
FTL B3 should do varargs tail calls and stack overflows
https://bugs.webkit.org/show_bug.cgi?id=152934
Summary FTL B3 should do varargs tail calls and stack overflows
Filip Pizlo
Reported 2016-01-08 16:16:09 PST
Patch forthcoming.
Attachments
the patch (3.43 KB, patch)
2016-01-08 16:18 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-01-08 16:18:42 PST
Created attachment 268597 [details] the patch
WebKit Commit Bot
Comment 2 2016-01-08 16:20:59 PST
Attachment 268597 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:344: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:352: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2016-01-08 16:21:44 PST
Comment on attachment 268597 [details] the patch Hold on, this isn't working right.
Filip Pizlo
Comment 4 2016-01-08 16:24:01 PST
Comment on attachment 268597 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=268597&action=review > Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:345 > + jit.copyCalleeSavesToVMCalleeSavesBuffer(); I have to add AllowMacroScratchRegisterUsage above here.
Saam Barati
Comment 5 2016-01-08 16:33:21 PST
Comment on attachment 268597 [details] the patch r=me
Filip Pizlo
Comment 6 2016-01-08 16:38:39 PST
Note You need to log in before you can comment on or make changes to this bug.